Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-29858

Missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "fill_schema_proc"

    XMLWordPrintable

Details

    Description

      SELECT COUNT(*) FROM information_schema.PARAMETERS WHERE SPECIFIC_CATALOG = NULL;
      

      10.11 af59b677ea

      /mnt8t/src/10.11-bug/sql/mariadbd: debugger aborting because missing DBUG_RETURN or DBUG_VOID_RETURN macro in function "fill_schema_proc"
       
      221024  2:00:07 [ERROR] mysqld got signal 6 ;
       
      #5  0x00007fdecf9ff537 in __GI_abort () at abort.c:79
      #6  0x000055662afc6ab5 in DbugExit (why=0x7fdec66ee9e0 "missing DBUG_RETURN or DBUG_VOID_RETURN macro in function \"fill_schema_proc\"\n") at /data/src/10.11-bug/dbug/dbug.c:2045
      #7  0x000055662afc2ac6 in _db_return_ (_stack_frame_=0x7fdec66eecd0) at /data/src/10.11-bug/dbug/dbug.c:1213
      #8  0x0000556629535f32 in fill_schema_proc (thd=0x62c0000b0288, tables=0x6290000e6c50, cond=0x6290000e7538) at /data/src/10.11-bug/sql/sql_show.cc:6790
      #9  0x0000556629555011 in get_schema_tables_result (join=0x6290000e88f0, executed_place=PROCESSED_BY_JOIN_EXEC) at /data/src/10.11-bug/sql/sql_show.cc:9043
      #10 0x00005566294248a7 in JOIN::exec_inner (this=0x6290000e88f0) at /data/src/10.11-bug/sql/sql_select.cc:4770
      #11 0x0000556629422673 in JOIN::exec (this=0x6290000e88f0) at /data/src/10.11-bug/sql/sql_select.cc:4591
      #12 0x0000556629426a94 in mysql_select (thd=0x62c0000b0288, tables=0x6290000e6c50, fields=..., conds=0x6290000e7538, og_num=0, order=0x0, group=0x0, having=0x0, proc_param=0x0, select_options=2701396736, result=0x6290000e88c0, unit=0x62c0000b46c8, select_lex=0x6290000e6560) at /data/src/10.11-bug/sql/sql_select.cc:5071
      #13 0x00005566293f7073 in handle_select (thd=0x62c0000b0288, lex=0x62c0000b45f0, result=0x6290000e88c0, setup_tables_done_option=0) at /data/src/10.11-bug/sql/sql_select.cc:582
      #14 0x0000556629320635 in execute_sqlcom_select (thd=0x62c0000b0288, all_tables=0x6290000e6c50) at /data/src/10.11-bug/sql/sql_parse.cc:6261
      #15 0x000055662930f010 in mysql_execute_command (thd=0x62c0000b0288, is_called_from_prepared_stmt=false) at /data/src/10.11-bug/sql/sql_parse.cc:3945
      #16 0x000055662932b418 in mysql_parse (thd=0x62c0000b0288, rawbuf=0x6290000e6450 "SELECT COUNT(*) FROM information_schema.PARAMETERS WHERE SPECIFIC_CATALOG = NULL", length=80, parser_state=0x7fdec66f2a50) at /data/src/10.11-bug/sql/sql_parse.cc:8023
      #17 0x0000556629301b60 in dispatch_command (command=COM_QUERY, thd=0x62c0000b0288, packet=0x629000253289 "SELECT COUNT(*) FROM information_schema.PARAMETERS WHERE SPECIFIC_CATALOG = NULL", packet_length=80, blocking=true) at /data/src/10.11-bug/sql/sql_parse.cc:1894
      #18 0x00005566292fe944 in do_command (thd=0x62c0000b0288, blocking=true) at /data/src/10.11-bug/sql/sql_parse.cc:1407
      #19 0x00005566297a8430 in do_handle_one_connection (connect=0x61100000a708, put_in_cache=true) at /data/src/10.11-bug/sql/sql_connect.cc:1416
      #20 0x00005566297a7dc6 in handle_one_connection (arg=0x61100000a5c8) at /data/src/10.11-bug/sql/sql_connect.cc:1318
      #21 0x000055662a381d86 in pfs_spawn_thread (arg=0x618000005d08) at /data/src/10.11-bug/storage/perfschema/pfs.cc:2201
      #22 0x00007fdecfeeaea7 in start_thread (arg=<optimized out>) at pthread_create.c:477
      #23 0x00007fdecfad9aef in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
      

      Introduced by

      commit beb9a5459d4fc21c7d3a3bf1bbc9f461d8f7e51c
      Author: Oleg Smirnov
      Date:   Mon Sep 12 14:28:00 2022 +0700
       
          MDEV-20609 Full table scan in INFORMATION_SCHEMA.PARAMETERS/ROUTINES
      

      Attachments

        Issue Links

          Activity

            People

              oleg.smirnov Oleg Smirnov
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2h 35m
                  2h 35m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.