MDEV-29858 Missing DBUG_RETURN or DBUG_VOID_RETURN in fill_schema_proc